Fix code coverage